--- a/view/editorView.mustache
+++ b/view/editorView.mustache
@@ -1,5 +1,11 @@
 <div class="container">
     <h1 class="text-center my-4">Lista de Preguntas</h1>
+    {{#info}}
+        <div class="alert alert-info mt-4 mx-auto text-center" role="alert" style="max-width: 500px; width: 100%;">
+            <i class="bi bi-info-circle-fill me-2"></i>
+            {{info}}
+        </div>
+    {{/info}}
     <div class="accordion" id="preguntasAccordion">
         {{#preguntas}}
             <div class="accordion-item">
